<resources>
    <string name="app_name">Renew Data</string>
    <string name="app_source">https://dennohpeter.com/projects/renew-data</string>
    <string name="telkom">Telkom</string>
    <string name="purchased_time">Purchased Time</string>
    <string name="expiry_time">Expiry Time</string>
    <string name="time_left">Time Left</string>
    <string name="renew_now">Renew Now</string>
    <string name="expired">Expired</string>
    <string name="not_date">__:__:__</string>
    <string name="feedback_and_suggestions">Feedback &amp; Suggestions</string>
    <string name="about_renewdata">About Renew Data</string>
    <string name="email">denispeterson96@gmail.com</string>
    <!--    About activity  -->
    <string name="about">About</string>
    <string name="app_version">V: %1$s</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="copyright">Built &amp; Designed by <a href="https://dennohpeter.com">Dennis Peterson</a> </string>
    <string name="rate">Rate</string>
    <string name="show_changelog">Show Changelog</string>
    <!--    Contributors Credit card -->
    <string name="ok">OK</string>
    <string name="role">Developer Role</string>
    <string name="name">Developer Name</string>
    <!--    Developer names and Roles -->
    <string name="dev1">Coder Jaymoh</string>
    <string name="idealist">Idealist</string>
    <string name="dev2">Symons Ombori</string>
    <string name="contributor">Contributor</string>
    <string name="select_network">Select Network: </string>
    <string name="date">date</string>
    <string name="message_body">Message body</string>
    <string name="nothing_to_show">Nothing to show.\n Try <b>refreshing…</b></string>
    <string name="action_ok">Continue</string>
    <string name="subscribed">subscribed</string>
    <string name="exhausted">exhausted</string>
    <string name="twenty_four_hour_fmt">Check to display the time in a 24 hour format.</string>
    <string name="twelve_hour_fmt">Uncheck to display the time in a 12 hour format using AM and PM.</string>
    <string name="default_reminder_time">10</string>
    <string name="default_snooze_time">5</string>
    <string name="select_date_format">Select Date Format</string>
    <string name="default_date_format">MMM dd, yyyy hh:mm:ss</string>
    <string name="syncing_with_messages">Syncing with messages…</string>

    <string name="update_option">UPDATE</string>
    <string name="dismiss_text">OK, Later</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>

    <string name="update_title">New version is available</string>
    <string name="update_message">Please update to the new version to get new features.</string>
    <string name="close">CLOSE</string>
    <string name="changelog">Changelog</string>

    // supported networks
    <string-array name="networks">
        <item>Telkom</item>
    </string-array>

    // supported languages
    <string-array name="languages">
        <item>English</item>
    </string-array>

    // date format
    <string-array name="date_formats">
        <item>MMM dd, yyyy hh:mm:ss</item>
        <item>hh:mm:ss MMM dd, yyyy</item>
    </string-array>
</resources>
